<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:background="#272525"
    tools:context=".activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@drawable/send"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tabMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification_text"
            android:textColor="@color/colorTextSecondary"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginEnd="55dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="10dp"

            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:hint="Phone number"
            app:helperText="Required*"
            app:helperTextTextColor="@color/colorAccent"
            android:textColorHint="@color/colorTextSecondary"
            app:startIconDrawable="@drawable/baseline_call_24"
            app:prefixText="+91"
            app:errorEnabled="true"

            app:errorIconDrawable="@drawable/error_24"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView"
            app:layout_constraintVertical_bias="0.303"
            tools:layout_editor_absoluteX="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="10">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:textColor="@color/white"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:text="@string/send_otp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="@drawable/button_bg"
                />
            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

     

    </LinearLayout>

</ScrollView>